# eclipse

./: CHANGELOG.md  README.md  collection.json  docker_env  environment.yml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: installation_and_basic_usage.ipynb
examples/: collection.json  item.json
src/stactools/eclipse/: __init__.py  collection.json  column_descriptions.md  commands.py  stac.py
tests/: test_commands.py  test_module.py  test_stac.py
